--- a/css/module/footer.css
+++ b/css/module/footer.css
@@ -4,52 +4,115 @@
   padding-bottom: 40px;
   color: #ffffff;  
 }
+
 .footer__container {
   display: grid;
-  grid-template-columns: 3fr 6fr 3fr;
-  gap: 20px;
+  grid-template-columns: 3fr 9fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 34px 20px;
 } 
-.footer__column {
-  display: flex;
-}
+
 .footer__column_first {
+  display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;  
 }
+
 .first-column__img {
   margin-bottom: 34px;
 }
+
 .first-column__copyright {
   font-weight: 400;
   font-size: 12px;
   line-height: 130%;
 }
+
 .footer-navigation {
 }
+
 .footer__column_second {
+}
+
+.footer-navigation__list {
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
-}
-.footer-navigation__list {
+  padding: 0;
 }
 .footer-navigation__item {
 }
+
 .footer-navigation__link {
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
+  white-space: nowrap;
 }
+
 .footer__column_third {
+  display: flex;
   flex-direction: column;
   align-items: flex-end;
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
+
+.copyright {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+}
+
 .telegram {
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
 }
+
 .telegram__link {
   font-weight: 400;
   font-size: 12px;
   line-height: 130%;
+}
+
+@media (max-width: 1024px) {
+  .footer__container {
+    grid-template-columns: 2fr 4fr 2fr;
+  }
+  .footer-navigation__item {
+    margin-left: -13px;
+  }
+  .footer-navigation__item:last-child {
+    margin-left: 0px;
+  }
+}
+
+@media (max-width: 768px) {
+  .footer__container {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 2fr 1fr;
+    gap: 39px 10px;
+  }
+  .footer-navigation__list {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  .footer-navigation__link {
+    font-size: 14px;
+    line-height: 17px;
+  }
+  .footer__column_third {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+  }
+  .footer-navigation__item {
+    margin-left: -20px;
+    margin-right: 0;
+    margin-bottom: 15px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+  }
+  .footer-navigation__item:last-child {
+    margin-bottom: 0px;
+  }
 }
